--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/zeeilant-website/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zeeilant | Innovative AI Solutions Company</title>
     <meta name="description" content="Zeeilant provides innovative AI solutions including AI agents and custom solutions to transform your business and stay ahead of the competition." />
     <meta name="keywords" content="AI solutions, custom AI, artificial intelligence, AI agents, business transformation" />
     <meta name="author" content="Zeeilant" />
     <meta name="theme-color" content="#FF7F2A" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/zeeilant-website/manifest.json" />
     <meta property="og:title" content="Zeeilant | Innovative AI Solutions Company" />
     <meta property="og:description" content="Zeeilant provides innovative AI solutions including AI agents and custom solutions to transform your business." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/zeeilant-website/og-image.png" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
