--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="AI solutions, custom AI, artificial intelligence, AI agents, business transformation" />
     <meta name="author" content="Zeeilant" />
     <meta name="theme-color" content="#FF7F2A" />
-    <link rel="manifest" href="/zeeilant-website/manifest.json" />
+    <!-- <link rel="manifest" href="/zeeilant-website/manifest.json" /> -->
     <meta property="og:title" content="Zeeilant | Innovative AI Solutions Company" />
     <meta property="og:description" content="Zeeilant provides innovative AI solutions including AI agents and custom solutions to transform your business." />
     <meta property="og:type" content="website" />
